crabbing-interpreters/tests/testsuite/snapshots/testsuite__crabbing-interpreters__tests__cases__function_call_parameters.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - crabbing-interpreters/tests/cases/function_call_parameters.lox
---
success: true
exit_code: 0
----- stdout -----
27
42

----- stderr -----
