crabbing-interpreters/tests/testsuite/snapshots/testsuite__crabbing-interpreters__tests__cases__gc_hole_in_stack_layout.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - crabbing-interpreters/tests/cases/gc_hole_in_stack_layout.lox
---
success: true
exit_code: 0
----- stdout -----
ok

----- stderr -----
