crabbing-interpreters/tests/testsuite/snapshots/testsuite__crabbing-interpreters__tests__cases__local_variables.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - crabbing-interpreters/tests/cases/local_variables.lox
---
success: true
exit_code: 0
----- stdout -----
<function f at [POINTER]>
42
27

----- stderr -----
